# deltaquery

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deltaquery.dockerfiles.yaml  dockerfiles.yaml
dockerfiles/: dockerfile  dockerfile.dev
examples/: README.md  adbc_flightsql_ingest.py  adbc_flightsql_query.py  adbc_postgresql.py  datafusion_query.rs  delta_write.rs  requirements.txt  spark_query.py  trino_query.py
examples/flight_sql/: Cargo.toml
examples/flight_sql/src/: main.rs
samples/: docker-compose-prometheus.yaml  docker-compose-seaweedfs.yaml  docker-compose-trino.yaml  docker-compose.yaml
samples/configs/: delta.yaml  local.yaml  simple.yaml
samples/grafana/: dashboard.yaml  datasource.yaml  grafana.ini
samples/grafana/dashboards/: system.json
samples/prometheus/: prometheus.yaml
samples/samples/delta/_delta_log/: _last_checkpoint
samples/samples/delta/date=2023-11-08/hour=07/: part-00000-bca17976-6fcd-465b-a1c3-fb1050c56b50-c000.snappy.parquet
samples/samples/delta/date=2023-11-08/hour=08/: part-00000-2aeef4b8-db5a-4cf9-bec2-b3c77434c5fa-c000.snappy.parquet  part-00000-30ea9392-c53b-4fd2-bc80-43539912ab90-c000.snappy.parquet  part-00000-3d9cd94a-0318-4331-9252-a573d4130aed-c000.snappy.parquet  part-00000-4ed2a9f5-f0c1-42d8-97b1-ff7552671940-c000.snappy.parquet  part-00000-7d285fb2-76e7-4dc9-9427-a450009c7af6-c000.snappy.parquet  part-00000-8ce7ff2e-b5ab-42ec-bc3e-c56a3e7eaa83-c000.snappy.parquet  part-00000-8d4d632a-f317-46d0-891b-1a3f9353a76f-c000.snappy.parquet  part-00000-af62fded-046c-47ef-a759-ade9c5fe2e5c-c000.snappy.parquet  part-00000-beb0cb27-2861-4b42-9a0f-f8bc1a3fb809-c000.snappy.parquet  part-00000-c37ab748-bad9-44b1-a318-4ffbf960c3dd-c000.snappy.parquet  part-00000-c69e9012-35f3-4deb-b07f-9f4b1b9d7fbf-c000.snappy.parquet  part-00000-d247cbee-c5d0-4f16-8bd0-0b1db7202c9e-c000.snappy.parquet
samples/seaweedfs/: filer.toml  s3.json
samples/trino/: config.properties  delta.properties  jvm.config
src/: auth.rs  compute.rs  configs.rs  error.rs  identity.rs  lib.rs  main.rs  metadata.rs  metastore.rs  signer.rs  state.rs  storage.rs  table.rs
src/commons/: delta.rs  flight.rs  mod.rs  sql.rs  tests.rs  tonic.rs
src/computes/: mod.rs
src/computes/duckdb/: mod.rs
src/errors/: arrow.rs  base64.rs  datafusion.rs  deltalake.rs  duckdb.rs  mod.rs  polars.rs  sqlparser.rs  string.rs  tera.rs  tonic.rs
src/servers/: mod.rs
src/servers/delta/: mod.rs
src/servers/flightsql/: helpers.rs  mod.rs  server.rs
src/servers/flightsql/simple/: mod.rs
src/servers/flightsql/single/: mod.rs
src/servers/simple/: mod.rs
src/servers/single/: mod.rs
src/signers/: s3.rs
src/storages/delta/: mod.rs  predicates.rs  statistics.rs
src/tables/: mod.rs
src/tables/datafusion/: mod.rs  statistics.rs
src/tables/delta/: mod.rs  predicates.rs  statistics.rs
src/tables/polars/: mod.rs  predicates.rs  statistics.rs
