[package]
name = "deltaquery"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["examples/flight_sql"]

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["fs"] }
tokio-util = "0.6.3"
log = "0"
env_logger = "0.9.3"
async-trait = "0.1"
async-std = { version = "1.12.0", features = ["attributes"] }
async-recursion = "1.0.4"
async-channel = "1.9.0"
thiserror = "1"
signal-hook = "0.3.15"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = "0"
chrono-tz = "0.8.3"
duration-str = "0.7.0"
arrow = { version = "49", features = ["prettyprint", "ffi"] }
arrow-cast = { version = "49", features = ["prettyprint"] }
arrow-schema = { version = "49" }
arrow-select = { version = "49" }
arrow-ipc = { version = "49", features = ["zstd"] }
arrow-flight = { version = "49", features = ["flight-sql-experimental"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
once_cell = { version = "1" }
paste = { version = "1.0" }
url = "2.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
tera = "1.19.0"
struct-field-names-as-array = "0.2.0"
local-ip-address = "0.5.6"
prost = { version = "0.12.1", default-features = false, features = ["prost-derive"] }
tonic = { version = "0.10.0", default-features = false, features = ["transport", "codegen", "prost", "tls", "gzip"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "json"] }
duckdb = { git = "https://github.com/duckdb/duckdb-rs", features = ["appender-arrow"] }
sqlparser = { version = "0.39", features = ["serde", "visitor"] }
deltalake = { git = "https://github.com/haruband/delta-rs", branch = "nazare", features = ["default", "datafusion", "s3"] }
datafusion = { git = "https://github.com/haruband/arrow-datafusion" }
object_store = { version = "0.8" }
aws-config = { version = "1" }
aws-credential-types = { version = "1" }
aws-sdk-s3 = { version = "1" }

[dev-dependencies]
fake = "2.6"

[features]
default = ["duckdb-bundled"]
duckdb-bundled = ["duckdb/bundled", "duckdb/httpfs", "duckdb/parquet"]